# kalokohan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Dockerfile  Makefile  Procfile  README.md  compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: deploying_to_dokku.md
kalokohan/: asgi.py  urls.py  wsgi.py
kalokohan/configs/: apps.py  models.py
kalokohan/configs/migrations/: 0001_initial.py
kalokohan/configs/tests/: test_api.py
kalokohan/health_stats/: admin.py  api.py  apps.py  models.py  queries.py  security.py  types.py
kalokohan/health_stats/migrations/: 0001_initial.py
kalokohan/home/: apps.py  views.py
kalokohan/home/templates/home/: index.html
kalokohan/locale/tl/LC_MESSAGES/: django.po
kalokohan/logs/: admin.py  api.py  apps.py  models.py
kalokohan/logs/migrations/: 0001_initial.py  0002_auto_20221028_2043.py
kalokohan/logs/tests/: test_api.py
kalokohan/scrapers/: apps.py  urls.py  views.py
kalokohan/settings/: base.py  dev.py  test.py
kalokohan/static_src/tailwind/: styles.css
kalokohan/templates/: base.html
kalokohan/templates/home/: index.html
kalokohan/users/: apps.py
kalokohan/utils/: apps.py  security.py
kalokohan/wallpapers/: admin.py  api.py  apps.py  clients.py  factories.py  models.py  security.py  types.py
kalokohan/wallpapers/fixtures/: photos_random_resp.json
kalokohan/wallpapers/migrations/: 0001_initial.py  0002_pastrandomphoto.py  0003_delete_config.py
kalokohan/wallpapers/tests/: test_api.py  test_clients.py
kalokohan/weather/: api.py  apps.py  clients.py  renderers.py  types.py  urls.py  views.py
