[tool.poetry]
name = "kalokohan"
version = "0.1.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
readme = "README.md"
packages = [{include = "kalokohan"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.16"
django-extensions = "^3.2.3"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.8.2"
psycopg = "^3.2.3"
sentry-sdk = "^2.19.1"
factory-boy = "^3.3.1"
django-ninja = "^1.3.0"
django-solo = "^2.4.0"
requests = "^2.32.3"
responses = "*"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "^4.0.1"
bandit = "^1.8.0"
detect-secrets = "^1.5.0"
djhtml = "^3.0.7"
dslr = {version="*", extras=["psycopg2-binary"]}
django-types = "*"
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.per-file-ignores]
"kalokohan/*/migrations/*.py" = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]
