[tool.poetry]
name = "kalokohan"
version = "0.0.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2.1"
django-extensions = "^4.1"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.9.0"
psycopg = "^3.2.9"
sentry-sdk = "^2.29.1"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "^4.2.0"
bandit = "^1.8.3"
detect-secrets = "^1.5.0"
djlint = "^1.36.4"
dslr = {version="*", extras=["psycopg2-binary"]}
django-types = "*"
pyright = "^1.1.401"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.per-file-ignores]
"kalokohan/*/migrations/*.py" = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.djlint]
# https://www.djlint.com/docs/linter/#rules
ignore = "H029,H030,H031"
