[tool.poetry]
name = "kalokohan"
version = "0.0.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2.4"
django-extensions = "^4.1"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.1"
whitenoise = "^6.9.0"
psycopg = "^3.2.9"
sentry-sdk = "^2.32.0"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "^4.2.0"
bandit = "^1.8.5"
detect-secrets = "^1.5.0"
djlint = "^1.36.4"
dslr = {version="*", extras=["psycopg2-binary"]}
django-types = "*"
pyright = "^1.1.403"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.per-file-ignores]
"kalokohan/*/migrations/*.py" = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.djlint]
# https://www.djlint.com/docs/linter/#rules
ignore = "H029,H030,H031"
